Trying to make the tests work again with junit5/java11