@@ -63,7 +63,7 @@
   <build>
     <defaultGoal>install</defaultGoal>
     <plugins>
-      <plugin>
+     <!-- <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.8.5</version>
@@ -81,7 +81,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
+      </plugin>-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -157,13 +157,20 @@
           <tagNameFormat>@{project.version}</tagNameFormat>
         </configuration>
       </plugin>
+       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.8.2</version>
+       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
         <configuration>
+          <testFailureIgnore>true</testFailureIgnore>
+
           <argLine>
-            --illegal-access=permit
+
           </argLine>
         </configuration>
       </plugin>
@@ -173,11 +180,11 @@
         <version>2.22.2</version>
          <configuration>
           <argLine>
-            --illegal-access=permit
+
           </argLine>
         </configuration>
       </plugin>
-      <plugin>
+    <!--  <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
         <version>3.0.0-M2</version>
@@ -190,13 +197,18 @@
             <configuration>
               <rules>
                 <requireMavenVersion>
-                  <version>3.0.5</version>
+                  <version>3.6.0</version>
                 </requireMavenVersion>
+                <banDuplicateClasses>
+                  <ignoreClasses>
+                    <ignoreClass>module-info</ignoreClass>
+                  </ignoreClasses>
+                </banDuplicateClasses>
               </rules>
             </configuration>
           </execution>
         </executions>
-      </plugin>
+      </plugin>-->
     </plugins>
   </build>
 
@@ -268,6 +280,34 @@
               </execution>
             </executions>
           </plugin>-->
+
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>github-pages</id>
+      <build>
+        <plugins>
+          <plugin>
+            <!-- Deploy the web site -->
+            <groupId>com.github.github</groupId>
+            <artifactId>site-maven-plugin</artifactId>
+            <version>0.12</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>site</goal>
+                </goals>
+                <phase>site</phase>
+                <configuration>
+                  <!-- Make sure you have authentication for this server on .m2/settings.xml -->
+                  <server>github</server>
+                  <message>Building site for my project</message>
+                  <merge>true</merge>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
       </build>
     </profile>
@@ -340,19 +380,13 @@
       <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
-        <version>3.13.2</version>
+        <version>3.14.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>com.sun.xml.bind</groupId>
-        <artifactId>jaxb-impl</artifactId>
-        <version>2.3.2</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>com.sun.xml.bind</groupId>
-        <artifactId>jaxb-core</artifactId>
-        <version>2.3.0.1</version>
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>jaxb-runtime</artifactId>
+        <version>2.4.0-b180830.0438</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -394,18 +428,6 @@
       <artifactId>checker-qual</artifactId>
       <optional>true</optional>
     </dependency>
-    <dependency>
-      <groupId>org.checkerframework</groupId>
-      <artifactId>checker</artifactId>
-      <version>${checker.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.checkerframework</groupId>
-      <artifactId>jdk8</artifactId>
-      <version>${checker.version}</version>
-      <scope>provided</scope>
-    </dependency>
 
     <dependency>
       <groupId>javax.persistence</groupId>
@@ -445,5 +467,6 @@
       </snapshots>
     </repository>
   </repositories>
+
 
 </project>
